--- a/styles/style.css
+++ b/styles/style.css
@@ -1,22 +1,35 @@
-* {
-    margin: 0;
+/* Reset */
+*{
     padding: 0;
+    margin: 0;
     box-sizing: border-box;
-  }
-  
-  body {
-    background: #f1f1f1;
-  }
-  
-  body, button, input, textarea {
-    color: #333;
-    font: 1rem 400 'Roboto';
-  }
-  
-  button:hover {
-    cursor: pointer;
-  }
-  
-  a {
+    border: 0;
+    list-style: none;
     text-decoration: none;
-  }
+    font-family: 'Open Sans', sans-serif;
+    font-family: 'Roboto', sans-serif;
+}
+
+html{
+    width: 100vw;
+    height: 100vh;
+    font-size: 62.5%;
+    overflow-x: hidden;
+}
+  
+body {
+background: #f1f1f1;
+}
+
+body, button, input, textarea {
+color: #333;
+font: 1rem 400 'Roboto';
+}
+
+button:hover {
+cursor: pointer;
+}
+
+a {
+text-decoration: none;
+}
